BugFixes: breaking sidebar windows | username visible only on hover (dropdown)

--- a/redesign/assets/css/_component_dropdown.less
+++ b/redesign/assets/css/_component_dropdown.less
@@ -3,7 +3,8 @@
 .drpdwn-wdgt {
   position: absolute;
   right: 0;
-
+  overflow-x: visible;
+  overflow-y: hidden;
   float: right;
 
   width: @dropdown-widget-width - 2*@border-width;
