--- a/redesign/assets/css/_component_sidebar.less
+++ b/redesign/assets/css/_component_sidebar.less
@@ -22,7 +22,7 @@
 
     width: 25px;
     height: 24px;
-    margin-right: 15px;
+    margin-right: 14px;
 
     vertical-align: middle;
   }
